bring back java 8 support